# domain-pre-flight

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/domain-pre-flight/: SKILL.md
.githooks/: pre-push
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  refresh-known-brands.yml  refresh-tld-risk.yml  release.yml  test.yml
docs/: architecture.md
docs/agents/: README.md  adding-platforms.md  data-updates.md  extending-checks.md  tuning-scores.md  writing-tests.md
docs/context-cards/: README.md  checks-basic.md  checks-handles.md  checks-history.md  checks-llmo.md  checks-score.md  checks-semantics.md  checks-trademark.md  checks-typosquat.md  cli.md
docs/decisions/: 0001-tldextract-for-psl-parsing.md  0002-band-as-str-enum-not-strenum.md  0003-tld-risk-as-json-bundle.md  0004-wayback-bounded-count.md  0005-bot-walled-platforms-return-unknown.md  0006-trademark-default-off.md  0007-score-weights-centralised.md  0008-llmo-experimental-marker.md  0009-trademark-deeplink-only.md  README.md
docs/guide/: usage.md
examples/subprocess-variant/: README.md  bench.py  server.py
scripts/: refresh_known_brands.py  refresh_tld_risk.py  smoke.sh
src/domain_pre_flight/: __init__.py  cli.py  mcp_server.py
src/domain_pre_flight/checks/: __init__.py  basic.py  dns_sanity.py  handles.py  history.py  idn_homograph.py  llmo.py  permutations.py  rdap.py  score.py  semantics.py  suggest.py  trademark.py  typosquat.py
src/domain_pre_flight/data/: known_brands.txt  tld_risk.json
src/domain_pre_flight/data/negative_meanings/: ar.txt  en.txt  es.txt  hi.txt  id.txt  ja.txt  ko.txt  pt.txt  th.txt  vi.txt  zh.txt
tests/: test_basic.py  test_cli.py  test_dns_sanity.py  test_handles.py  test_idn_homograph.py  test_llmo.py  test_mcp_server.py  test_permutations.py  test_rdap.py  test_score.py  test_semantics.py  test_suggest.py  test_tld_risk_bundle.py  test_trademark.py  test_typosquat.py
