[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-pre-flight"
version = "0.1.0"
description = "Pre-flight checks before registering a domain for a new site or app: basic name checks, past content history, risk scoring."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ken Imoto" }]
requires-python = ">=3.10"
keywords = ["domain", "dns", "seo", "pre-flight", "wayback", "domain-registration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "confusable-homoglyphs>=3.3",
    "dnspython>=2.6",
    "Levenshtein>=0.25",
    "requests>=2.31",
    "rich>=13.7",
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/kenimo49/domain-pre-flight"
Repository = "https://github.com/kenimo49/domain-pre-flight"
Issues = "https://github.com/kenimo49/domain-pre-flight/issues"

[project.scripts]
domain-pre-flight = "domain_pre_flight.cli:main"
dpf = "domain_pre_flight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_pre_flight"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length is enforced softly via line-length above

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src/domain_pre_flight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/domain_pre_flight"]
omit = [
    "src/domain_pre_flight/cli.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
